# pyCrafter4500

./: pyproject.toml
pycrafter4500/: __init__.py  app.py  connectors.py  dlpc.py  macos.py  pycrafter4500.py  tests.py  usb_drivers.py  utils.py
pycrafter4500/app/: app.py  socket_server.py
pycrafter4500/app/static/: webhid.js
