[project]
name = "pycrafter4500"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask-socketio>=5.4.1",
    "flask>=3.0.3",
    "hidapi>=0.14.0.post2",
    "ipython>=8.29.0",
    "pyusb>=1.2.1",
    "streamlit>=1.39.0",
]
